[gd_scene load_steps=34 format=3 uid="uid://dsxexwbvxt3qc"]

[ext_resource type="Script" uid="uid://w8rc57e7s2h6" path="res://script/rea_lfinalvillain.gd" id="1_x650l"]
[ext_resource type="Texture2D" uid="uid://jt8gkhw7xej1" path="res://art/characters/Gangsters_3/Dead.png" id="2_kisdk"]
[ext_resource type="Texture2D" uid="uid://bbjfk35a1o0qv" path="res://art/characters/Gangsters_3/Run.png" id="3_g7vke"]
[ext_resource type="Texture2D" uid="uid://cfoa6avkp1o60" path="res://art/characters/Gangsters_3/Idle.png" id="4_6qaqg"]
[ext_resource type="AudioStream" uid="uid://dh5ac0a4k2cy3" path="res://sound/enemy-death-voice.wav" id="5_7rgnu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dl1yq"]
atlas = ExtResource("2_kisdk")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nanqn"]
atlas = ExtResource("2_kisdk")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiwj0"]
atlas = ExtResource("2_kisdk")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2rbn"]
atlas = ExtResource("2_kisdk")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_305g5"]
atlas = ExtResource("2_kisdk")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbxmq"]
atlas = ExtResource("3_g7vke")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqqn3"]
atlas = ExtResource("3_g7vke")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fox5n"]
atlas = ExtResource("3_g7vke")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_73ag5"]
atlas = ExtResource("3_g7vke")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3nw5"]
atlas = ExtResource("3_g7vke")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0ljd"]
atlas = ExtResource("3_g7vke")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7u78"]
atlas = ExtResource("3_g7vke")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3scam"]
atlas = ExtResource("3_g7vke")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu7nx"]
atlas = ExtResource("3_g7vke")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vg47"]
atlas = ExtResource("3_g7vke")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0xin"]
atlas = ExtResource("4_6qaqg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp0nw"]
atlas = ExtResource("4_6qaqg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs6br"]
atlas = ExtResource("4_6qaqg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jn8o"]
atlas = ExtResource("4_6qaqg")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv24j"]
atlas = ExtResource("4_6qaqg")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdcnc"]
atlas = ExtResource("4_6qaqg")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds6pw"]
atlas = ExtResource("4_6qaqg")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2rbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl1yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nanqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiwj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2rbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_305g5")
}],
"loop": false,
"name": &"dead",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbxmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqqn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fox5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73ag5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3nw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0ljd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7u78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3scam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu7nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vg47")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0xin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp0nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs6br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jn8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv24j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdcnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds6pw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwx65"]
size = Vector2(31, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o4fh"]
size = Vector2(34, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_305g5"]
size = Vector2(31, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_iiinl"]
radius = 178.07

[sub_resource type="CircleShape2D" id="CircleShape2D_ckluo"]
radius = 2425.01

[node name="enemyscreen" type="CharacterBody2D"]
modulate = Color(1, 1, 0, 1)
position = Vector2(2, -8)
collision_layer = 8
collision_mask = 23
script = ExtResource("1_x650l")

[node name="gun_muzzle" type="Marker2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.890625, 0.6875)
sprite_frames = SubResource("SpriteFrames_e2rbn")
frame_progress = 0.556238
speed_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 4)
shape = SubResource("RectangleShape2D_jwx65")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-10, 3)
shape = SubResource("RectangleShape2D_2o4fh")

[node name="hurt" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt"]
position = Vector2(-10, 3)
shape = SubResource("RectangleShape2D_305g5")

[node name="detectionzone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionzone"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_iiinl")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="enemysound" type="AudioStreamPlayer2D" parent="."]

[node name="attacktimer" type="Timer" parent="."]
wait_time = 1.5

[node name="exitdetectionzone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitdetectionzone"]
position = Vector2(-4, 1)
shape = SubResource("CircleShape2D_ckluo")

[node name="hurt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7rgnu")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="hurt" to="." method="_on_hurt_area_entered"]
[connection signal="body_entered" from="detectionzone" to="." method="_on_detectionzone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attacktimer" to="." method="_on_attacktimer_timeout"]
[connection signal="body_exited" from="exitdetectionzone" to="." method="_on_exitdetectionzone_body_exited"]
